--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -521,13 +521,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Execute the main function\n",
+    "### Execute the main data-gathering function\n",
     "Before starting to acquire data we always want to make sure that we have all data needed in the correct form, so we\n",
     "run\n",
     "\"remove invalids\" before acquiring any new data. Then we acquire as much data as we need to reach \"original size\"\n",
     "phon is the main function used to acquire new phonetics and consists of the functions above. Phon allows you to\n",
     "acquire data in \"groups\" of size \"group_size\" which will run remove_invalids() every time group size is reached to\n",
-    "eliminate the likelihood that data that was acquired is repeated through random calls."
+    "eliminate the likelihood that data that was acquired is repeated by using random words."
    ],
    "metadata": {
     "collapsed": false,
@@ -19440,6 +19440,7 @@
     " not contained within our dataset. In the future, we would like to acquire more data and standardize our phonetics\n",
     " acquired from multiple dictionaries to create a massive library to train our model on. We expect this to increase\n",
     " the overall accuracy of this for use with future word prediction models.\n",
+    " <br>\n",
     " <br>\n",
     "Our model is standardized in such a way that a similar method could be used to predict words in systems that also use\n",
     " similar phonetics. This would allow for researchers around the world to use our system, replace the dictionary with\n",
