--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -19452,7 +19452,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Additional Resources\n",
@@ -19478,7 +19481,16 @@
     "\n",
     "Addtionally, here is a link to Cho et al's foundational seq2seq model paper:\n",
     "\n",
-    "https://arxiv.org/abs/1406.1078"
+    "https://arxiv.org/abs/1406.1078\n",
+    "\n",
+    "If the reader is interested in speeding up their programs with concurrency:\n",
+    "https://realpython.com/python-concurrency/\n",
+    "\n",
+    "If the reader would like more information on techniques for web scraping:\n",
+    "https://realpython.com/python-web-scraping-practical-introduction/\n",
+    "\n",
+    "Here is a great introduction to various ideas around phonetics:\n",
+    "https://www.britannica.com/science/phonetics"
    ]
   }
  ],
