--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -196,11 +196,12 @@
    },
    "source": [
     "### Declare key functions and then run the code to acquire the phonetics efficiently\n",
-    "This section consists of several key functions, get_urls, get_word, get_one, and get_all. These functions are the\n",
-    "functions that allow users to retrieve information from various dictionary sites. get_urls retrieves (size) random\n",
-    "words from the word list and converts them into the appropriate url. Get all requests URLs concurrently by\n",
-    "using multithreading to call get_one. Get one requests one webpage from urls and is processed by get_word, which\n",
-    "retrieves the correct word and its respective phonetics."
+    "This section consists of several key functions, get_urls(), get_word(), get_one(), and get_all(). These functions are\n",
+    " the\n",
+    "functions that allow users to retrieve information from various dictionary sites. get_urls() retrieves (size) random\n",
+    "words from the word list and converts them into the appropriate url. get_all() requests URLs concurrently by\n",
+    "using multithreading to call get_one(). get_one() requests one webpage from urls. The HTML result is then processed\n",
+    "by get_word(), which retrieves the correct word and its respective phonetics."
    ]
   },
   {
