--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -1579,11 +1579,11 @@
     "collapsed": false
    },
    "source": [
-    "Well that accuracy is... disappointing. It might be better than the average human (when faced with 10s of thousands of rare words), but thats still a lot of error.\n",
-    "\n",
+    "Well that accuracy is... disappointing. It might be better than the average human (when faced with 10s of thousands\n",
+    "of rare words), but that's still a lot of errors.\n",
     "What is the reason for this?\n",
-    "\n",
-    "Even though the attention module should, in theory, allow the model to be much more performant, the English language is rife with inconsistent spelling and pronunciation rules. Additionally, some words (e.g. their, theyre, there) are pronounced the same, so the model does not have enough information to distinguish between them. One more confounding factor is that the phonemes we are using are from the International Phonetic Alphabet, so are not as specific to the English language as the Carnegie Melon pronunciation dictionary ARPAbet (an English prononciation specification). Thus, the model needs to learn more complex rules, especially considering that there are more distinct phonemes in IPA than in ARPAbet. However, our use of IPA in theory allows better spelling on non-English words.\n",
+    "Even though the attention module should, in theory, allow the model to be much more performant, the English language\n",
+    "is rife with inconsistent spelling and pronunciation rules. Additionally, some words (e.g. their, they\\re, there) are pronounced the same, so the model does not have enough information to distinguish between them. One more confounding factor is that the phonemes we are using are from the International Phonetic Alphabet, so are not as specific to the English language as the Carnegie Melon pronunciation dictionary ARPAbet (an English prononciation specification). Thus, the model needs to learn more complex rules, especially considering that there are more distinct phonemes in IPA than in ARPAbet. However, our use of IPA in theory allows better spelling on non-English words.\n",
     "\n",
     "What can we do about this poor performance? We can see a couple cells up that the model is generally off by just a few grapheme characters. Hopefully you are already thinking along the lines of spellcheck 🙂."
    ]
