--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -1569,8 +1569,8 @@
     "# turn dropout off\n",
     "model.eval()\n",
     "\n",
-    "# with torch.no_grad():\n",
-    "    # print(\"Test accuracy: \" + str(get_0_1_accuracy(test, model)))"
+    "with torch.no_grad():\n",
+    "    print(\"Test accuracy: \" + str(get_0_1_accuracy(test, model)))"
    ]
   },
   {
@@ -1784,7 +1784,7 @@
     "We hope you enjoyed this journey through the highs and lows of data collection and model training 🙂.\n",
     "\n",
     "## Concluding Remarks\n",
-    "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 70%. With more\n",
+    "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 67.6%. With more\n",
     " time, research, computation power, and data we believe we can significantly increase the prediction accuracy. However,\n",
     " with our current system and limited time, we are already able to predict more than two-thirds of words we found that\n",
     "  are\n",
